--- a/com.Equarz.Ecommerce/test-output/old/Default suite/methods-alphabetical.html
+++ b/com.Equarz.Ecommerce/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="63f569">  <td>23/09/06 15:16:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegTest.Givenurl()[pri:1, instance:com.Equarz.Testcases.RegTest@71d44a3]">Givenurl</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="63f569">  <td>23/09/06 15:16:44</td>   <td>4437</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegTest.Registration(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:com.Equarz.Testcases.RegTest@71d44a3]">Registration</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="63f569">  <td>23/09/06 15:16:40</td>   <td>449</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegTest.initialization()[pri:0, instance:com.Equarz.Testcases.RegTest@71d44a3]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="63f569">  <td>23/09/06 15:16:40</td>   <td>449</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegTest.initialization()[pri:0, instance:com.Equarz.Testcases.RegTest@71d44a3]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="ffbd75">  <td>23/09/15 13:32:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Initi()[pri:0, instance:com.Equarz.Testcases.LoginTest@4145bad8]">&gt;&gt;Initi</td> 
+<td>&nbsp;</td>  <td>main@1787189503</td>   <td></td> </tr>
 </table>
