--- a/com.Equarz.Ecommerce/test-output/old/Default suite/classes.html
+++ b/com.Equarz.Ecommerce/test-output/old/Default suite/classes.html
@@ -4,14 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.Equarz.Testcases.LoginTest</td>
+<td>com.Equarz.Testcases.Wishlist_test</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validatelogin</td>
+<td>categorywishlist</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>homewishlist</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>searchwishlist</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>bannerwishlist</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -21,7 +33,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Initi</td>
+<td>initialize</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
