--- a/com.Equarz.Ecommerce/test-output/old/Default suite/methods-alphabetical.html
+++ b/com.Equarz.Ecommerce/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ffbd75">  <td>23/09/15 18:04:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Initi()[pri:0, instance:com.Equarz.Testcases.LoginTest@4145bad8]">&gt;&gt;Initi</td> 
-<td>&nbsp;</td>  <td>main@1787189503</td>   <td></td> </tr>
-<tr bgcolor="ffbd75">  <td>23/09/15 18:04:30</td>   <td>11950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.validatelogin()[pri:1, instance:com.Equarz.Testcases.LoginTest@4145bad8]">validatelogin</td> 
-  <td>main@1787189503</td>   <td></td> </tr>
+<tr bgcolor="ffbd75">  <td>23/09/21 17:59:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wishlist_test.bannerwishlist()[pri:0, instance:com.Equarz.Testcases.Wishlist_test@5ab956d7]">bannerwishlist</td> 
+  <td>main@1293203138</td>   <td></td> </tr>
+<tr bgcolor="ffbd75">  <td>23/09/21 17:59:56</td>   <td>30206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wishlist_test.categorywishlist()[pri:0, instance:com.Equarz.Testcases.Wishlist_test@5ab956d7]">categorywishlist</td> 
+  <td>main@1293203138</td>   <td></td> </tr>
+<tr bgcolor="ffbd75">  <td>23/09/21 18:00:43</td>   <td>77763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wishlist_test.homewishlist()[pri:0, instance:com.Equarz.Testcases.Wishlist_test@5ab956d7]">homewishlist</td> 
+  <td>main@1293203138</td>   <td></td> </tr>
+<tr bgcolor="ffbd75">  <td>23/09/21 18:00:47</td>   <td>81258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Wishlist_test.initialize()[pri:0, instance:com.Equarz.Testcases.Wishlist_test@5ab956d7]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1293203138</td>   <td></td> </tr>
+<tr bgcolor="ffbd75">  <td>23/09/21 18:00:47</td>   <td>81258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Wishlist_test.initialize()[pri:0, instance:com.Equarz.Testcases.Wishlist_test@5ab956d7]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1293203138</td>   <td></td> </tr>
+<tr bgcolor="ffbd75">  <td>23/09/21 18:00:47</td>   <td>81258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Wishlist_test.initialize()[pri:0, instance:com.Equarz.Testcases.Wishlist_test@5ab956d7]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1293203138</td>   <td></td> </tr>
+<tr bgcolor="ffbd75">  <td>23/09/21 18:00:47</td>   <td>81258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Wishlist_test.initialize()[pri:0, instance:com.Equarz.Testcases.Wishlist_test@5ab956d7]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1293203138</td>   <td></td> </tr>
+<tr bgcolor="ffbd75">  <td>23/09/21 18:01:11</td>   <td>105222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Wishlist_test.searchwishlist()[pri:0, instance:com.Equarz.Testcases.Wishlist_test@5ab956d7]">searchwishlist</td> 
+  <td>main@1293203138</td>   <td></td> </tr>
 </table>
